--- a/app/auth/register/register.module.css
+++ b/app/auth/register/register.module.css
@@ -62,3 +62,100 @@
   opacity: 0.9;
   color: var(--searchBarPlaceholder);
 }
+
+/* Common button styles */
+.button {
+  height: 2rem;
+  outline: none;
+  display: flex;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  animation-duration: 0.2s;
+  transition-duration: 0.2s;
+  padding: 0.375rem 0.75rem;
+}
+
+/* Styles specific to .formContainer .button */
+.formContainer .button {
+  color: var(--authFormBtnCol);
+  background-color: var(--authFormBtn);
+  border: 1px solid var(--authFormBtn);
+}
+
+.formContainer .button:hover {
+  color: var(--authFormBtnhoverCol);
+  background-color: var(--authFormBtnhoverBg);
+}
+
+.divider {
+  width: 100%;
+  display: flex;
+  margin: 25px 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.line {
+  flex: 1;
+  height: 1px;
+  background-color: var(--authLine);
+}
+
+.text {
+  display: flex;
+  padding: 0 0.5rem;
+  line-height: 1rem;
+  font-size: 0.73rem;
+  align-items: center;
+  color: var(--authText);
+  text-transform: uppercase;
+  background-color: var(--authTextBg);
+}
+
+.socialContainer {
+  gap: 6px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Styles specific to .socialContainer .button */
+.socialContainer .button {
+  color: var(--socialBtn);
+  background-color: inherit;
+  border: 1px solid var(--socialBtnBg);
+}
+
+.socialContainer .button:hover {
+  color: #e8e5e3;
+  background-color: var(--socialBtnHover);
+}
+
+.button .span {
+  display: flex;
+  padding: 0 8px;
+  flex: 0 0 100px;
+  align-items: center;
+}
+
+.link {
+  cursor: pointer;
+  color: var(--socialBtn);
+}
+
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
+}
