--- a/app/(website)/new-post/newpost.module.css
+++ b/app/(website)/new-post/newpost.module.css
@@ -1,7 +1,28 @@
 .container {
+  margin: auto;
   display: flex;
+  max-width: 720px;
   margin-top: 24px;
   padding-top: 5rem;
+  flex-direction: column;
+}
+
+.wrapper {
+  gap: 6px;
+  display: flex;
+  margin: 0 0 10px 0;
+  flex-direction: column;
+}
+
+.split {
+  display: flex;
+  padding: 0.5rem 0.75rem;
+  border: 1px solid #e5e7eb;
+  justify-content: space-between;
+}
+
+.select {
+  width: max-content;
 }
 
 @media (min-width: 576px) {
