--- a/app/(website)/new-post/newpost.module.css
+++ b/app/(website)/new-post/newpost.module.css
@@ -14,10 +14,21 @@
   flex-direction: column;
 }
 
+.input {
+  border: 0;
+  height: 2rem;
+  outline: none;
+  font-size: 26px;
+  padding: 0.5rem 0;
+  background-color: inherit;
+  color: var(--searchBarColor);
+  border-bottom: 1px solid #e5e7eb;
+}
+
 .split {
   display: flex;
-  padding: 0.5rem 0.75rem;
-  border: 1px solid #e5e7eb;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid #e5e7eb;
   justify-content: space-between;
 }
 
