--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,17 @@
   --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  /* App colors */
+  --white: #ffffff;
+  --success: #1a8917;
+  --successHover: #0f730c;
   /* Body background color */
   --bodyBgColor-dark: #020617;
-  --bodyBgColor-light: #ffffff;
+  --bodyBgColor-light: var(--white);
   --bodyBgColor: var(--bodyBgColor-light);
   /* Navbar background color */
   --navBarBgColor-dark: #0f172a;
-  --navBarBgColor-light: #ffffff;
+  --navBarBgColor-light: var(--white);
   --navBarBgColor: var(--navBarBgColor-light);
   /* Navbar border color */
   --navBarBorderColor-dark: #374151;
@@ -48,7 +52,7 @@
   --logoColor: var(--logoColor-light);
   /* Settings menu */
   --settingsMenuBg-dark: #0f172a;
-  --settingsMenuBg-light: #ffffff;
+  --settingsMenuBg-light: var(--white);
   --settingsMenuBg: var(--settingsMenuBg-light);
   /* Settings menu border*/
   --settingsMenuBorder-dark: #30363d;
@@ -75,7 +79,7 @@
   --featuredModifiedDate-light: #999999;
   --featuredModifiedDate: var(--featuredModifiedDate-light);
   /* Post header*/
-  --postHeader-dark: #ffffff;
+  --postHeader-dark: var(--white);
   --postHeader-light: #2f1c6a;
   --postHeader: var(--postHeader-light);
   /* Post desc*/
@@ -107,7 +111,7 @@
   --sideBarTitle-light: #2f1c6a;
   --sideBarTitle: var(--sideBarTitle-light);
   /* sidebar post title */
-  --sideBarPostTitle-dark: #ffffff;
+  --sideBarPostTitle-dark: var(--white);
   --sideBarPostTitle-light: #242424;
   --sideBarPostTitle: var(--sideBarPostTitle-light);
   /* sidebar post details */
@@ -190,6 +194,8 @@
   --socialBtnHover-dark: #1b1e2e;
   --socialBtnHover-light: #1c1917;
   --socialBtnHover: var(--socialBtnHover-light);
+  /* social button hover color */
+  --socialBtnhoverCol: #e8e5e3;
 }
 
 [data-theme="dark"] {
