--- a/components/featuredWriters/featuredwriters.module.css
+++ b/components/featuredWriters/featuredwriters.module.css
@@ -27,7 +27,7 @@
   flex: 2;
   display: flex;
   padding-left: 10px;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: space-between;
 }
